build: rename to ownfolio

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>myfolio</title>
+    <title>ownfolio</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
