--- a/pages/index.tmpl.html
+++ b/pages/index.tmpl.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="date" />
-    <title>myfolio</title>
+    <title>ownfolio</title>
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/index.css" rel="stylesheet" />
